Another page design done

--- a/index.html
+++ b/index.html
@@ -968,22 +968,26 @@
 
 
           <!-- ========== Why Choose Us Start =========== -->
-            <section class="custom-container">
+            <section class="custom-container care-why-choose-us">
               <h2>WHY CHOOSE OUR MOBILE PERSONAL EMERGENCY ALARMS</h2>
-              <div>
-                <div>
+              <div class="care-why-choose-us">
+                <div class="care-why-choose-us-item">
+                  <i class="fa-solid fa-hand-holding-hand"></i>
                   <h3>WORRY-FREE CONNECTED CARE</h3>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam repellat voluptates dignissimos iusto architecto, nam iste nisi tempore natus recusandae.</p>
                 </div>
-                <div>
+                <div class="care-why-choose-us-item">
+                  <i class="fa-regular fa-gem"></i>
                   <h3>CONFIDENCE ANYTIME</h3>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam repellat voluptates dignissimos iusto architecto, nam iste nisi tempore natus recusandae.</p>
                 </div>
-                <div>
+                <div class="care-why-choose-us-item">
+                  <i class="fa-solid fa-face-smile"></i>
                   <h3>ENJOY INDEPENDENCE</h3>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam repellat voluptates dignissimos iusto architecto, nam iste nisi tempore natus recusandae.</p>
                 </div>
-                <div>
+                <div class="care-why-choose-us-item">
+                  <i class="fa-solid fa-helmet-safety"></i>
                   <h3>ENSURE SAFETY</h3>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam repellat voluptates dignissimos iusto architecto, nam iste nisi tempore natus recusandae.</p>
                 </div>
