--- a/index.html
+++ b/index.html
@@ -968,32 +968,99 @@
 
 
           <!-- ========== Why Choose Us Start =========== -->
-            <section class="custom-container care-why-choose-us">
-              <h2>WHY CHOOSE OUR MOBILE PERSONAL EMERGENCY ALARMS</h2>
-              <div class="care-why-choose-us">
-                <div class="care-why-choose-us-item">
-                  <i class="fa-solid fa-hand-holding-hand"></i>
-                  <h3>WORRY-FREE CONNECTED CARE</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam repellat voluptates dignissimos iusto architecto, nam iste nisi tempore natus recusandae.</p>
+          <section class="custom-container tunstall-why-choose-us-main-parent">
+            <h2>WHY CHOOSE OUR MOBILE PERSONAL EMERGENCY ALARMS</h2>
+            <div class="tunstall-why-choose-us">
+              <div class="tunstall-why-choose-us-item">
+                <i class="fa-solid fa-hand-holding-hand"></i>
+                <h3>WORRY-FREE CONNECTED care</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam repellat voluptates dignissimos iusto architecto, nam iste nisi tempore natus recusandae.</p>
+              </div>
+              <div class="tunstall-why-choose-us-item">
+                <i class="fa-regular fa-gem"></i>
+                <h3>CONFIDENCE ANYTIME</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam repellat voluptates dignissimos iusto architecto, nam iste nisi tempore natus recusandae.</p>
+              </div>
+              <div class="tunstall-why-choose-us-item">
+                <i class="fa-solid fa-face-smile"></i>
+                <h3>ENJOY INDEPENDENCE</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam repellat voluptates dignissimos iusto architecto, nam iste nisi tempore natus recusandae.</p>
+              </div>
+              <div class="tunstall-why-choose-us-item">
+                <i class="fa-solid fa-helmet-safety"></i>
+                <h3>ENSURE SAFETY</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam repellat voluptates dignissimos iusto architecto, nam iste nisi tempore natus recusandae.</p>
+              </div>
+            </div>
+          </section>
+        <!-- ========== Why Choose Us End =========== -->
+
+        <!-- ========== Features Start =========== -->
+          <section class="custom-container tunstall-features-main-parent">
+            <h2>Discover the Features of the Tunstall Gem4</h2>
+            <div class="tunstall-features">
+              <div class="tunstall-features-items tunstall-features-items-first">
+                <div class="tunstall-features-item">
+                  <i class="fa-regular fa-circle-dot"></i>
+                  <h3>Easy-to-use SOS Button</h3>
+                  <p>With its large, easy-to-use SOS button, the Tunstall Gem4 lets you raise an alarm instantly during emergencies.</p>
                 </div>
-                <div class="care-why-choose-us-item">
-                  <i class="fa-regular fa-gem"></i>
-                  <h3>CONFIDENCE ANYTIME</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam repellat voluptates dignissimos iusto architecto, nam iste nisi tempore natus recusandae.</p>
+                <div class="tunstall-features-item">
+                  <i class="fa-solid fa-location-dot"></i>
+                  <h3>Accurate GPS Location</h3>
+                  <p>Using GPS technology, the Gem4 accurately pinpoints your location, aiding our Customer Care Centre or your loved ones in finding you promptly.</p>
                 </div>
-                <div class="care-why-choose-us-item">
-                  <i class="fa-solid fa-face-smile"></i>
-                  <h3>ENJOY INDEPENDENCE</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam repellat voluptates dignissimos iusto architecto, nam iste nisi tempore natus recusandae.</p>
-                </div>
-                <div class="care-why-choose-us-item">
-                  <i class="fa-solid fa-helmet-safety"></i>
-                  <h3>ENSURE SAFETY</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam repellat voluptates dignissimos iusto architecto, nam iste nisi tempore natus recusandae.</p>
+                <div class="tunstall-features-item">
+                  <i class="fa-solid fa-person-shelter"></i>
+                  <h3>Automatic Fall Detection</h3>
+                  <p>For added safety, you can equip your Gem4 with automatic fall detection, which can detect falls and trigger an alarm. </p>
                 </div>
               </div>
-            </section>
-          <!-- ========== Why Choose Us End =========== -->
+              <div class="tunstall-features-big-product">
+                <img src="img/headphones.png" alt="">
+              </div>
+              <div class="tunstall-features-items tunstall-features-items-last">
+                <div class="tunstall-features-item">
+                  <i class="fa-brands fa-usb"></i>
+                  <h3>Convenient Charging</h3>
+                  <p>The Gem4 includes a USB-powered charging dock for hassle-free device charging, ensuring it's always ready when needed.</p>
+                </div>
+                <div class="tunstall-features-item">
+                  <i class="fa-solid fa-wifi"></i>
+                  <h3>Fast 4G Connectivity</h3>
+                  <p>Stay connected with the reliable 4G mobile network, ensuring swift communication of emergency alerts.</p>
+                </div>
+                <div class="tunstall-features-item">
+                  <i class="fa-solid fa-water"></i>
+                  <h3>Water-Resistant Design</h3>
+                  <p>With an IP67 water-resistant rating, the Gem4 can withstand immersion in water for up to 30 minutes at a 1-meter depth, making it suitable for wet environments and showering.</p>
+                </div>
+              </div>
+            </div>
+          </section>
+        <!-- ========== Features End =========== -->
+
+        <!-- ========== Our Track Record Start =========== -->
+        <section class="custom-container tunstall-our-track-record-main-parent">
+          <div class="tunstall-our-track-record">
+            <h2>Our Track Record</h2>
+            <div class="tunstall-our-track-record-parent">
+              <div class="tunstall-our-track-record-item">
+                <img src="img/01.jpg" alt="">
+              </div>
+              <div class="tunstall-our-track-record-item">
+                <img src="img/02.jpg" alt="">
+              </div>
+              <div class="tunstall-our-track-record-item">
+                <img src="img/03.jpg" alt="">
+              </div>
+              <div class="tunstall-our-track-record-item">
+                <img src="img/04.jpg" alt="">
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- ========== Our Track Record End =========== -->
 
 
 
