--- a/index.html
+++ b/index.html
@@ -224,10 +224,6 @@
 
       <div style="text-align: center;">
         <h2>Your peace of mind - your way</h2>
-        <p>The elderly (65+), their adult-aged children (40s-50s), people in "independent living" situations (people
-          with limited abilities due to age, infirmity or disability, who wish to retain their independence and not live
-          in a care facility), carers of the aforementioned (aged care staff, allied health workers, disability support
-          workers)</p>
 
         <!-- Desktop version of your table -->
         <div class="desktop">
@@ -369,7 +365,7 @@
           </div>
         </div>
         <div class="tunstall-features-big-product">
-          <img src="img/headphone.png" alt="">
+          <img src="img/Tunstall-Gem4.png" alt="">
         </div>
         <div class="tunstall-features-items tunstall-features-items-last">
           <div class="tunstall-features-item">
@@ -975,7 +971,7 @@
 
 
           <!-- ========== Why Choose Us Start =========== -->
-          <section class="custom-container tunstall-why-choose-us-main-parent">
+          <!-- <section class="custom-container tunstall-why-choose-us-main-parent">
             <h2>WHY CHOOSE OUR MOBILE PERSONAL EMERGENCY ALARMS</h2>
             <div class="tunstall-why-choose-us">
               <div class="tunstall-why-choose-us-item">
@@ -999,7 +995,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam repellat voluptates dignissimos iusto architecto, nam iste nisi tempore natus recusandae.</p>
               </div>
             </div>
-          </section>
+          </section> -->
         <!-- ========== Why Choose Us End =========== -->
 
   </main>
@@ -1014,13 +1010,13 @@
     $('.slide_main').slick({
       slidesToShow: 1,
       slidesToScroll: 1,
-      arrows: false,
       dots: false,
+      arrows: true,
       fade: true,
       asNavFor: '.slider_child'
     });
     $('.slider_child').slick({
-      slidesToShow: 2,
+      slidesToShow: 3,
       slidesToScroll: 1,
       asNavFor: '.slide_main',
       arrows: false,
