Another bug fixed

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
     content="Discover the Tunstall Gem4, an advanced personal alarm with 24/7 monitoring support. Get peace of mind knowing that help is just a button press away." />
-  <title>Tunstall Gem4: Personal Alarm For The Elderly.</title>
+  <title>Tunstall Gem4: Personal Alarm For The Elderly</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
     integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -47,7 +47,7 @@
     <!-- support -->
     <section class="custom-container">
       <div class="support">
-        <h1 class="t-center">Tunstall Gem4: Personal Alarm For The Elderly.</h1>
+        <h1 class="t-center">Tunstall Gem4: Personal Alarm For The Elderly</h1>
         <div class="row">
           <div class="col-lg-6 slide-box">
             <div class="slide_main">
@@ -450,20 +450,24 @@
 
     <!-- product-solution -->
     <section class="custom-container">
-      <div class="product-solution">
-        <div class="py-20">
-          <iframe width="100%" height="415" src="https://www.youtube.com/embed/RwIAxfcZmuY">
+      <div class="product-solution new-product-solution-parent">
+        <div class="py-20 new-product-solution-child">
+          <iframe width="100%" height="315" src="https://www.youtube.com/embed/RwIAxfcZmuY">
           </iframe>
         </div>
-        <div class="flex-center">
-          <a id="order-button" href="#package-anchor">
-            <div class="sqs-add-to-cart-button sqs-suppress-edit-mode sqs-button-element--primary" role="button">
-              <div class="sqs-add-to-cart-button-inner">Buy Now</div>
-            </div>
-          </a>
-
-          <a href="https://www.tunstallhealthcare.com.au/callback-request" class="tun-btn-primary my-10"
-            style="display:inline-block; margin-left:50px;;">Request a Callback</a>
+        <div class="flex-center new-product-solution-child">
+          <p>The Tunstall Gem4 can help individuals maintain their independence and stay in their homes longer. Knowing that help is always available can provide peace of mind and confidence to those who may otherwise feel vulnerable or at risk.</p>
+          <p>The Tunstall Gem4 can help individuals maintain their independence and stay in their homes longer. Knowing that help is always available can provide peace of mind and confidence to those who may otherwise feel vulnerable or at risk.</p>
+          <div class="custom-btn-parent">
+            <a id="order-button" href="#package-anchor">
+              <div class="sqs-add-to-cart-button sqs-suppress-edit-mode sqs-button-element--primary" role="button">
+                <div class="sqs-add-to-cart-button-inner">Buy Now</div>
+              </div>
+            </a>
+  
+            <a href="https://www.tunstallhealthcare.com.au/callback-request" class="tun-btn-primary my-10"
+              style="display:inline-block; margin-left:50px;;">Request a Callback</a>
+          </div>
         </div>
       </div>
       </div>
@@ -473,7 +477,7 @@
     <section class="custom-container container">
       <div class="tun-service">
         <h2 class="title tun-text-secondary py-10">The Tunstall Gem4 is for</h2>
-        <div id="sv1" class="boxes">
+        <div id="sv1" class="boxes new-boxes">
           <div class="box box2 boxFirst">
             <img
               src="https://images.squarespace-cdn.com/content/5b67adf2af2096c5aae0d566/3801976e-4458-433a-a959-03d9264f755a/Seniors+2.png"
@@ -541,6 +545,7 @@
       </div>
     </section>
     <!-- tun-service2 -->
+    
 
     <!-- client say -->
     <section class="custom-container">
@@ -768,10 +773,26 @@
             <a href="https://www.tunstallhealthcare.com.au/ndis" class="red-link">NDIS</a> participants:
           </p>
         </section>
+
+        <section class="custom-container">
+          <div class="custom-video-parent">
+            <div class="custom-video-box">
+                <div><iframe style="width: 100%;" width="560" height="315" src="https://www.youtube.com/embed/TjV-TZbM4-g?si=G0lm-FsPMQPOJLw6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+                <div class="custom-video-box-img">
+                  <img src="img/NDIS+Provider.png" alt="">
+                </div>
+            </div>
+            <div class="custom-video-box">
+              <div class="custom-video-box-content">
+                <p class="" style="white-space:pre-wrap;">As a registered NDIS provider, Tunstall regularly works with clients and care providers to help provide personal alarm packages and our 24/7 monitoring service. Our commitment and to supporting the safety, independence and confidence of our clients in Australia, New Zealand and around the world is second to none.</p><p class="" style="white-space:pre-wrap;">For more information about NDIS funded personal alarms, you can visit our <a href="/ndis">NDIS page</a> or <a href="/contact">contact our team</a> to discuss your eligibility and circumstances.</p>
+              </div>
+            </div>
+          </div>
+        </section>
         <!-- tun-feat -->
 
         <!-- product-solution -->
-        <section class="custom-container">
+        <!-- <section class="custom-container">
           <div class="py-10">
             <div class="btn-box">
               <a href="https://web.tunstallhealthcare.com.au/ndis-quote" class="tun-btn-primary"
@@ -782,7 +803,7 @@
                 Referral</a>
             </div>
           </div>
-        </section>
+        </section> -->
         <!-- product-solution -->
 
 
